<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.SignUpActivity"
        android:focusable="false"
        android:id="@+id/signUpConstraint"
        android:onClick="SignUpOnClick">

    <androidx.appcompat.widget.Toolbar
            android:layout_height="150dp"
            android:background="@drawable/curve_toolbar"
            android:id="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_width="0dp"/>
    <EditText
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@drawable/costume_edit_text"
            android:hint="Email"
            android:theme="@style/SignUpAndIn"

            android:inputType="textEmailAddress"
            android:focusedByDefault="false"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"
            android:textColorHint="@color/edit_text_hint_color"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/et_SignUpEmail"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@drawable/costume_edit_text"
            android:hint="Password"
            android:inputType="textPassword"
            android:theme="@style/SignUpAndIn"

            android:focusedByDefault="false"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"
            android:textColorHint="@color/edit_text_hint_color"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/et_SignUpPassword" app:layout_constraintEnd_toEndOf="@+id/et_SignUpEmail"
            app:layout_constraintStart_toStartOf="@+id/et_SignUpEmail" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_SignUpEmail"/>
    <Button
            android:text="Sign up"
            android:inputType="text"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/sign_button_text_color"
            android:background="@drawable/costume_sign_button"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_height="60dp"
            android:id="@+id/bt_SignUp"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUpPassword"
            app:layout_constraintStart_toStartOf="@+id/et_SignUpPassword"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_SignUpPassword"
            android:onClick="SignUpOnClick"/>
    <TextView
            android:text="@string/sign_up_with_facebook"
            android:textColor="@color/colorFacebook"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_FacebookSignUp" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_SignUp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="SignUpOnClick"/>
    <TextView
            android:text="@string/sign_up_with_gmail"
            android:textColor="@color/colorGmail"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_GmailSignUp"
            app:layout_constraintTop_toBottomOf="@+id/tv_FacebookSignUp" android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_FacebookSignUp"
            app:layout_constraintStart_toStartOf="@+id/tv_FacebookSignUp" android:onClick="SignUpOnClick"/>
    <TextView
            android:text="BUILD IT THE  RIGHT  WAY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_SignUpLogo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="22sp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/already_have_an_account_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_SignIn"
            app:layout_constraintBottom_toTopOf="@+id/tv_SignUpLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="12dp" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black" android:textSize="16sp" android:onClick="SignUpOnClick"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/iconfinder_square_facebook_317727"
            android:id="@+id/mg_FacebookIconSignUp"
            app:layout_constraintTop_toTopOf="@+id/tv_FacebookSignUp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_FacebookSignUp"
            app:layout_constraintEnd_toStartOf="@+id/tv_FacebookSignUp" android:layout_marginEnd="16dp"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/iconfinder_gmail_1220367"
            android:id="@+id/mg_GmailIconSignUp"
            app:layout_constraintStart_toStartOf="@+id/mg_FacebookIconSignUp"
            app:layout_constraintTop_toTopOf="@+id/tv_GmailSignUp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_GmailSignUp"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/email_logo"
            android:id="@+id/mg_EmailIconSignUp"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUpEmail" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/et_SignUpEmail"
            app:layout_constraintBottom_toBottomOf="@+id/et_SignUpEmail"/>
    <ToggleButton
            android:layout_width="30dp"
            android:textOff=""
            android:textOn=""
            android:layout_height="30dp"
            android:background="@drawable/password_toggle"
            android:id="@+id/mg_ShowPasswordSignUp"
            app:layout_constraintBottom_toBottomOf="@+id/et_SignUpPassword"
            app:layout_constraintTop_toTopOf="@+id/et_SignUpPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUpPassword"
            android:layout_marginEnd="16dp" android:onClick="SignUpOnClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>