<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.SignInActivity"
        android:focusable="false"
        android:onClick="SignInOnClick"
        android:id="@+id/signInConstrain">


    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="@drawable/curve_toolbar"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:layout_width="0dp"
              android:layout_height="60dp"
              android:theme="@style/SignUpAndIn"
              android:textColor="@color/colorWhite"
              android:textSize="18sp"
              android:inputType="textEmailAddress"
              android:background="@drawable/costume_edit_text"
              android:hint="Email"
              android:focusedByDefault="false"
              android:paddingStart="20dp"
              android:paddingEnd="50dp"
              android:textColorHint="@color/edit_text_hint_color"
              app:layout_constraintTop_toBottomOf="@id/toolbar"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="40dp"
              android:layout_marginEnd="40dp" android:id="@+id/et_SingInEmail" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:background="@drawable/costume_edit_text"
            android:hint="Password"
            android:theme="@style/SignUpAndIn"

            android:focusedByDefault="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="50dp"

            android:textColorHint="@color/edit_text_hint_color"
            android:ems="10"
            android:id="@+id/et_SignInPassword"
            app:layout_constraintStart_toStartOf="@+id/et_SingInEmail"
            app:layout_constraintEnd_toEndOf="@+id/et_SingInEmail"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_SingInEmail"/>
    <Button
            android:text="Sign in"
            android:inputType="text"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/sign_button_text_color"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/bt_SignIn"
            android:enabled="false"
            android:background="@drawable/costume_sign_button"
            app:layout_constraintStart_toStartOf="@+id/et_SignInPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_SignInPassword"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_SignInPassword"
            android:onClick="SignInOnClick"/>
    <TextView
            android:text="Forgot Password?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_Forgot"
            app:layout_constraintTop_toBottomOf="@+id/bt_SignIn" app:layout_constraintEnd_toEndOf="@+id/bt_SignIn"
            app:layout_constraintStart_toStartOf="@+id/bt_SignIn" android:layout_marginTop="12dp"
            android:textColor="@android:color/black" android:fontFamily="@font/montserrat" android:textStyle="bold"
            android:onClick="SignInOnClick"/>
    <TextView
            android:text="@string/sign_in_with_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_FacebookSignIn"
            android:textColor="@color/colorFacebook"
            app:layout_constraintEnd_toEndOf="@+id/tv_Forgot" app:layout_constraintStart_toStartOf="@+id/tv_Forgot"
            android:textSize="18sp" android:fontFamily="@font/montserrat"
            android:onClick="SignInOnClick" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_SignIn"/>
    <TextView
            android:text="@string/sign_in_with_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGmail"
            android:id="@+id/tv_GmailSignIn"
            app:layout_constraintTop_toBottomOf="@+id/tv_FacebookSignIn"
            app:layout_constraintEnd_toEndOf="@+id/tv_FacebookSignIn"
            app:layout_constraintStart_toStartOf="@+id/tv_FacebookSignIn" android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat" android:textSize="18sp" android:onClick="SignInOnClick"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_SignInLogo"
            android:text="BUILD IT THE  RIGHT  WAY"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="22sp" android:layout_marginBottom="16dp"
            android:textColor="@android:color/black" android:textStyle="bold" android:fontFamily="@font/montserrat"/>
    <TextView
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_SignUp"
            app:layout_constraintBottom_toTopOf="@+id/tv_SignInLogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="12dp" android:textSize="16sp"
            android:textColor="@android:color/black" android:fontFamily="@font/montserrat"
            android:onClick="SignInOnClick"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/iconfinder_square_facebook_317727"
            android:id="@+id/mg_FacebookIcon"
            app:layout_constraintEnd_toStartOf="@+id/tv_FacebookSignIn" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/tv_FacebookSignIn"
            app:layout_constraintBottom_toBottomOf="@+id/tv_FacebookSignIn"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/iconfinder_gmail_1220367"
            android:id="@+id/mg_GmailIcon"
            app:layout_constraintBottom_toBottomOf="@+id/tv_GmailSignIn"
            app:layout_constraintTop_toTopOf="@+id/tv_GmailSignIn"
            app:layout_constraintStart_toStartOf="@+id/mg_FacebookIcon"/>
    <ToggleButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textOff=""
            android:textOn=""
            android:checked="false"
            android:background="@drawable/password_toggle"
            android:id="@+id/mg_Showpassword"
            app:layout_constraintBottom_toBottomOf="@+id/et_SignInPassword"
            app:layout_constraintTop_toTopOf="@+id/et_SignInPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_SignInPassword" android:layout_marginEnd="16dp"
            android:onClick="SignInOnClick"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/email_logo"
            android:id="@+id/mg_emailIcon"
            app:layout_constraintBottom_toBottomOf="@+id/et_SingInEmail"
            app:layout_constraintTop_toTopOf="@+id/et_SingInEmail"
            app:layout_constraintEnd_toEndOf="@+id/et_SingInEmail" android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>